fix[ui]: body section fixed,body effect added,body gap fixed,navrbar activate fixed

--- a/src/index.css
+++ b/src/index.css
@@ -4,10 +4,9 @@
   --font-poppins: Poppins, sans-serif;
 }
 
-body{
-  @apply font-poppins;
+body {
+  font-family: 'Poppins', sans-serif;
 }
-
 
 
 
